--- a/src/app/pages/categories/category-form/category-form.component.html
+++ b/src/app/pages/categories/category-form/category-form.component.html
@@ -24,7 +24,7 @@
       <div class="form-row">
         <div class="form-group col-md-4">
           <label for="name">Nome</label>
-          <input type="text" id="name" class="form-control" formControlname="name">
+          <input type="text" id="name" class="form-control" formControlName="name">
 
           <div class="text-danger" *ngIf="categoryForm.get('name').invalid && categoryForm.get('name').touched">
             <div *ngIf="categoryForm.get('name').errors.required">Dado obrigatório.</div>
@@ -33,12 +33,19 @@
         </div>
         <div class="form-group col-md-8">
           <label for="description">Descrição</label>
-          <input type="text" id="description" class="form-control" formControlname="description">
+          <input type="text" id="description" class="form-control" formControlName="description">
         </div>
       </div>
     </div>
   </div>
 
+  <div class="alert alert-danger mt-4" *ngIf="serverErrorMessages">
+    <strong>Erro no servidor:</strong>
+    <ul>
+      <li *ngFor="let error of serverErrorMessages">{{error}}</li>
+    </ul>
+  </div>
+  
   <button [disabled]="submittingForm || categoryForm.invalid" type="submit" class="btn btn-primary btn-lg float-right mt-3">Salvar</button>
 
 </form>
